--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">RTAppNative</string>
+    <string name="login_page">Login Page</string>
+    <string name="qc_projects">QC Projects</string>
+    <string name="user_name">User name or Email</string>
+    <string name="password">Password</string>
 </resources>
